# glox

./: CMakeLists.txt  README.md  main.cpp
example/: first_ever_prog.glox  statement.glox
glox/: error.cpp  error.hpp  glox.cpp  glox.hpp  scanner.cpp  scanner.hpp  token.cpp  token.hpp
glox/interpreter/: interpreter.cpp  interpreter.hpp
glox/parser/: parser.cpp  parser.hpp
glox/representer/: assignment.hpp  binary.hpp  expression.cpp  expression.hpp  grouping.hpp  numeric_literal.hpp  operator.cpp  operator.hpp  opr.hpp  string_literal.hpp  unary.hpp  variable.hpp
glox/statements/: block.hpp  environment.hpp  expression.hpp  if.hpp  print.hpp  statement.hpp  variable.hpp
tests/: CMakeLists.txt  doctest.h  interpreter_tests.cpp  lexer_tests.cpp  parser_tests.cpp  printer_tests.cpp  tests_main.cpp
tools/: code_generator.cpp  code_generator.hpp  printer.cpp  printer.hpp
